@@ -38,6 +38,7 @@ Changelog for 1.3.6
 -Some options of the compat.ini have been renamed (for backward compatibility, there are aliases kept) (@Wohlstand)
 -Added the individual sound for Link's iceball shoot (@Wohlstand)
 -Added the proper sound for Link's fireball shoot (@Wohlstand)
+-Fixed TheXTech bug where if a moving layer stopped while a player was climbing a BGO, the player would keep moving. Also added bugfix for corresponding vanilla bug that occurred if a player was climbing a moving layer NPC. (@ds-sloth)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
